--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,74 +7,21 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:text="View 1"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_alignParentEnd="true"
-        android:text="View 2"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:text="View 3"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="View 4"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:text="View 5"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:text="View 6"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="View 7"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_centerVertical="true"
-        android:text="View 8"
-        android:background="#f20"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
+        android:padding="10dp"
+        android:id="@+id/text_view_1"
         android:layout_centerInParent="true"
-        android:text="View 9"
+        android:text="View 1"
+        android:background="#000000"
+        android:textColor="#fff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_toStartOf="@id/text_view_1"
+        android:padding="10dp"
+        android:layout_above="@id/text_view_1"
+        android:layout_centerInParent="true"
+        android:text="View 2"
         android:background="#f20"
         android:textColor="#fff"
         android:layout_width="wrap_content"
