--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,78 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:padding="10dp"
+        android:textSize="20sp"
         android:id="@+id/text_view_1"
-        android:layout_centerInParent="true"
-        android:text="View 1"
-        android:background="#000000"
-        android:textColor="#fff"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#2196F3"
+        android:text="Blue"
+        android:textColor="#fff" />
 
     <TextView
-        android:layout_toStartOf="@id/text_view_1"
-        android:padding="10dp"
+        android:textSize="20sp"
+        android:id="@+id/text_view_2"
+        android:layout_alignStart="@id/text_view_1"
         android:layout_above="@id/text_view_1"
-        android:layout_centerInParent="true"
-        android:text="View 2"
-        android:background="#f20"
-        android:textColor="#fff"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#8BC34A"
+        android:text="Green"
+        android:textColor="#fff" />
+
+    <TextView
+        android:textSize="20sp"
+        android:id="@+id/text_view_3"
+        android:layout_alignStart="@id/text_view_1"
+        android:layout_above="@id/text_view_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#FF1100"
+        android:text="Red"
+        android:textColor="#fff" />
+
+    <TextView
+        android:textSize="20sp"
+        android:id="@+id/text_view_4"
+        android:layout_alignStart="@id/text_view_1"
+        android:layout_below="@id/text_view_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#FFC107"
+        android:text="Orange"
+        android:textColor="#fff" />
+
+    <TextView
+        android:textSize="20sp"
+        android:id="@+id/text_view_5"
+        android:layout_alignStart="@id/text_view_1"
+        android:layout_below="@id/text_view_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#9A9995"
+        android:text="Gray"
+        android:textColor="#fff" />
+
+    <TextView
+        android:textSize="20sp"
+        android:id="@+id/text_view_6"
+        android:layout_alignStart="@id/text_view_1"
+        android:layout_below="@id/text_view_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:background="#C37ACF"
+        android:text="Pink"
+        android:textColor="#fff" />
 </RelativeLayout>
